# Blinc

./: .gitignore  CN_VISUAL_FIDELITY_AUDIT.md  Cargo.toml  OVERLAY_STACK_DESIGN.md  README.md  ROADMAP.md  backlog.md
crates/blinc_animation/: CHANGELOG.md  Cargo.toml
crates/blinc_animation/src/: keyframe.rs  lib.rs  presets.rs  scheduler.rs  spring.rs  suspension.rs  timeline.rs
crates/blinc_app/: CHANGELOG.md  Cargo.toml  README.md
crates/blinc_app/examples/: canvas_demo.rs  canvas_kit_demo.rs  carousel_demo.rs  chrome_tabs_demo.rs  cn_demo.rs  code_demo.rs  code_test.rs  complex_svg_demo.rs  css_debug.rs  css_features_demo.rs  css_parser_demo.rs  effects_demo.rs  emoji_demo.rs  flow_demo.rs  fluid_demo.rs  fuchsia_hello.rs  image_css_demo.rs  image_layer_test.rs  keyframe_canvas.rs  markdown_demo.rs  mesh_3d_demo.rs  motion_demo.rs  multi_window_demo.rs  music_player.rs  notch_demo.rs  overflow_fade_demo.rs  overlay_demo.rs  pointer_query_demo.rs  rich_text_demo.rs  rich_text_editor_demo.rs  scroll.rs  semantic_flow_demo.rs  sortable_demo.rs  stateful_demo.rs  styling_demo.rs  svg_animation_demo.rs  table_demo.rs  tabler_icons_demo.rs  text_position_test.rs  text_widgets.rs  (+7 more)
crates/blinc_app/src/: android.rs  app.rs  context.rs  dialog.rs  dnd.rs  file_open.rs  hot_reload.rs  hotkey.rs  ios.rs  lib.rs  notify.rs  svg_atlas.rs  tests.rs  text_measurer.rs  tray.rs  wayland_frame_gate.rs  web.rs  window_state.rs  windowed.rs
crates/blinc_canvas_kit/: BACKLOG.md  Cargo.toml
crates/blinc_canvas_kit/src/: geometry.rs  grid_pass.rs  lib.rs  painter.rs  scene3d.rs  sketch.rs
crates/blinc_canvas_kit/src/shaders/: grid.wgsl
crates/blinc_cn_dsl/: Cargo.toml
crates/blinc_cn_dsl/examples/: cn_dsl_demo.blinc  cn_dsl_demo.rs
crates/blinc_cn_dsl/src/: alert.rs  avatar.rs  badge.rs  button.rs  card.rs  color.rs  label.rs  lib.rs  progress.rs  separator.rs  skeleton.rs  spinner.rs
crates/blinc_cn_dsl/tests/: cn_basics.rs  cn_button.rs  cn_card.rs  cn_dsl_demo.rs  cn_progress_reactive.rs
crates/blinc_dsl_core/: Cargo.toml  UPSTREAM_PATCHES.md
crates/blinc_dsl_core/examples/: _probe_closure.rs  _probe_fsm_ctx.rs  _probe_match.rs  counter_dsl.blinc  counter_dsl.rs  reactive_dsl.blinc  reactive_dsl.rs  state_probe.rs
crates/blinc_dsl_core/grammar/: blinc.zyn
crates/blinc_dsl_core/src/: abi.rs  fsm_registry.rs  host.rs  lib.rs  passes.rs  runtime_bridge.rs  tests.rs  widget_ffi.rs
crates/blinc_dsl_core/tests/: extern_widget_macro.rs  multi_module.rs  stylesheet.rs
crates/blinc_dsl_macro/: Cargo.toml
crates/blinc_dsl_macro/src/: lib.rs
crates/blinc_gpu/: CHANGELOG.md  Cargo.toml
crates/blinc_gpu/src/: backbuffer.rs  bc_encode.rs  custom_pass.rs  flow_codegen.rs  flow_pipeline.rs  gradient_texture.rs  image.rs  lib.rs  mesh_pipeline.rs  paint.rs  particles.rs  path.rs  primitives.rs  renderer.rs  shaders.rs  text.rs
crates/blinc_gpu/src/shaders/: bloom.wgsl  clear_quad.wgsl  glass_dt.wgsl  image.wgsl  mesh.wgsl  mesh_dt.wgsl  oit_composite.wgsl  particle_render_dt.wgsl  sdf_3d.wgsl  sdf_3d_dt.wgsl  sdf_3d_vb.wgsl  sdf_core.wgsl  sdf_core_dt.wgsl  sdf_core_vb.wgsl  sdf_notch.wgsl  sdf_notch_dt.wgsl  sdf_notch_vb.wgsl  sdf_shadow.wgsl  sdf_shadow_dt.wgsl  (+6 more)
crates/blinc_image/: CHANGELOG.md  Cargo.toml  README.md
crates/blinc_image/src/: builtin.rs  decoder.rs  lib.rs  loader.rs  source.rs
crates/blinc_layout/: CHANGELOG.md  Cargo.toml
crates/blinc_layout/src/: animated.rs  back_handler.rs  binding.rs  canvas.rs  click_outside.rs  css_parser.rs  diff.rs  div.rs  element.rs  element_style.rs  event_handler.rs  event_router.rs  image.rs  interactive.rs  key.rs  lib.rs  motion.rs  motion_texture_cache.rs  notch.rs  overlay_state.rs  property.rs  render_state.rs  renderer.rs  scroll.rs  stack.rs  state_style_table.rs  stateful.rs  styled_text.rs  svg.rs  syntax.rs  text.rs  tree.rs  typography.rs  window_actions.rs
crates/blinc_media/: CHANGELOG.md  Cargo.toml
crates/blinc_media/src/: audio.rs  frame.rs  lib.rs  player.rs  rtc.rs  video.rs  web_video.rs
crates/blinc_noto_emoji/: Cargo.toml  README.md
crates/blinc_noto_emoji/src/: lib.rs
crates/blinc_noto_symbols/: Cargo.toml
crates/blinc_noto_symbols/src/: lib.rs
crates/blinc_router/: CHANGELOG.md  Cargo.toml
crates/blinc_router/src/: history.rs  lib.rs  route.rs  transition.rs
crates/blinc_runtime/: Cargo.toml
crates/blinc_runtime/src/: lib.rs  reactive_value.rs  reload.rs  scene.rs  signal.rs  value.rs  view.rs
crates/blinc_svg/: CHANGELOG.md  Cargo.toml
crates/blinc_svg/src/: lib.rs
examples/blinc_app_examples/: Cargo.toml
examples/blinc_app_examples/examples/: canvas_demo.rs  canvas_kit_demo.rs  carousel_demo.rs  chrome_tabs_demo.rs  cn_demo.rs  code_demo.rs  code_test.rs  complex_svg_demo.rs  css_debug.rs  css_features_demo.rs  css_parser_demo.rs  cutegirl_morph_demo.rs  effects_demo.rs  emoji_demo.rs  flow_demo.rs  fluid_demo.rs  fuchsia_hello.rs  gltf_animation_demo.rs  gpu_pass_demo.rs  hello_blinc.rs  image_css_demo.rs  image_layer_test.rs  keyframe_canvas.rs  markdown_demo.rs  mesh_3d_demo.rs  motion_demo.rs  multi_window_demo.rs  music_player.rs  node_editor_demo.rs  notch_demo.rs  overflow_fade_demo.rs  overlay_demo.rs  pointer_query_demo.rs  rich_text_demo.rs  rich_text_editor_demo.rs  router_navigation.rs  scroll.rs  semantic_flow_demo.rs  sortable_demo.rs  spinner_test.rs  (+17 more)
examples/blinc_app_examples/src/: lib.rs
examples/web_hello/: Cargo.toml  README.md  index.html
examples/web_hello/src/: lib.rs
examples/web_mobile_demo/: Cargo.toml  index.html
examples/web_mobile_demo/src/: lib.rs
examples/web_text_position/: Cargo.toml  build.rs  index.html
examples/web_text_position/src/: lib.rs
extensions/blinc_platform_web/: Cargo.toml
extensions/blinc_platform_web/src/: assets.rs  input.rs  lib.rs  wasm_bindgen_glue.rs  window.rs
tools/blinc-regression/: Cargo.toml
tools/blinc-regression/src/: main.rs
tools/build-web-examples/: Cargo.toml
tools/build-web-examples/src/: main.rs
tools/emoji-scan/: Cargo.toml  README.md
tools/emoji-scan/src/: main.rs
(+381 files in other folders)
