[workspace]
resolver = "2"
members = [
    "crates/blinc_app",
    "crates/blinc_cli",
    "crates/blinc_core",
    "crates/blinc_animation",
    "crates/blinc_image",
    "crates/blinc_layout",
    "crates/blinc_gpu",
    "crates/blinc_macros",
    "crates/blinc_dsl_macro",
    "crates/blinc_paint",
    "crates/blinc_platform",
    "crates/blinc_recorder",
    "crates/blinc_text",
    "crates/blinc_svg",
    "crates/blinc_theme",
    "crates/blinc_cn",
    "crates/blinc_cn_dsl",
    "crates/blinc_icons",
    "crates/blinc_tabler_icons",
    "crates/blinc_debugger",
    "crates/blinc_router",
    "crates/blinc_media",
    "crates/blinc_runtime",
    "crates/blinc_test_suite",
    # Blinc DSL — Zyntax-embedding crate, behind risk-reduction
    # prototype. See ROADMAP §3 for the staged plan.
    "crates/blinc_dsl_core",
    "extensions/blinc_platform_desktop",
    "extensions/blinc_platform_android",
    "extensions/blinc_platform_ios",
    "extensions/blinc_platform_harmony",
    "extensions/blinc_platform_web",
    "examples/web_hello",
    "examples/web_scroll",
    "examples/web_drag",
    "examples/web_assets",
    "examples/web_mobile_demo",
    "examples/web_typography",
    "examples/web_text_widgets",
    "examples/web_text_position",
    # Cross-target desktop examples (was crates/blinc_app/examples/*).
    # Separate crate so its 35MB of assets (videos, 3D models, HDRIs)
    # don't bloat the published blinc_app package.
    "examples/blinc_app_examples",
    # Auto-generated wasm wrapper crates produced by
    # `tools/build-web-examples` from the cross-target examples in
    # `examples/blinc_app_examples/examples/`. The directory is gitignored except
    # for the .gitignore + .gitkeep marker; the glob below tolerates
    # an empty match so a fresh checkout still resolves the workspace
    # before the codegen tool has run.
    "examples/_generated/*",
    # Codegen tool for the generated wrappers above. Not in
    # `default-members` — regular `cargo build` does not pull it.
    # Run with `cargo run -p blinc-build-web-examples`.
    "tools/build-web-examples",
    # Regression harness for the reactive-architecture-v2 phase work
    # (see `project_reactive_architecture_v2.md` in dev memory). Scripts
    # cn_demo interactions + captures CPU/visual baselines. Not in
    # `default-members`; run via `cargo run -p blinc-regression`.
    "tools/blinc-regression",
    # Scanner that extracts the non-ASCII codepoint set from workspace
    # Rust sources. Feeds the emoji font subsetter so Blinc only
    # bundles glyphs the application actually uses. Not in
    # `default-members`. Run with `cargo run -p blinc-emoji-scan`.
    "tools/emoji-scan",
    # First entry in the `blinc_<font>_emoji` add-on family: a
    # drop-in NotoColorEmoji fallback that auto-registers with
    # `blinc_text`'s global font registry via `#[ctor]`. Users add
    # it to their own Cargo.toml and get color emoji on wasm / Linux
    # / headless hosts with zero source changes. Keeps `blinc_text`
    # itself lean — apps that don't need emoji pay nothing.
    "crates/blinc_noto_emoji",
    # Sibling add-on: drop-in Noto Sans / Noto Sans Math subsets
    # covering the monochrome text characters that `blinc_noto_emoji`
    # doesn't carry (math operators, double arrows, currency
    # symbols, Latin-1 Supplement punctuation). Same register()
    # shape, same wiring in blinc_app's web runner. Ships two
    # tiny subsets (~6 KB + ~18 KB) generated by
    # `scripts/regen-symbols-subset.sh`.
    "crates/blinc_noto_symbols",
]

# Colocated downstream packages are gitignored (see .gitignore) and have
# their own upstream repos. Exclude their directory from this workspace so
# their Cargo.toml files don't get implicitly picked up if someone creates
# them as a workspace-style project.
exclude = [
    "packages/*",
    "packages",
    # Scaffold template for `blinc new` — this is a source template with
    # `{{project_name}}` placeholders, not a real crate. Cargo picks it
    # up when resolving git-fetched copies of this repo (blinc_gltf etc.
    # declare Blinc deps by git URL, and cargo scans every Cargo.toml
    # in the fetched tree) and chokes on the placeholder package name.
    "toolchain/templates",
    "toolchain/templates/rust",
]

# Platform-specific crates are included but have target-gated dependencies
# Build for Android: source scripts/android-env.sh && cargo build --target aarch64-linux-android -p blinc_platform_android
# Build for iOS: cargo build --target aarch64-apple-ios -p blinc_platform_ios

[workspace.package]
version = "0.5.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/project-blinc/Blinc"
rust-version = "1.85"

[workspace.dependencies]
# Krio (async runtime) — Zyntax's `krio_adapter` pins to rev `fe0177c`
# (see zyntax/crates/passes/krio_adapter/Cargo.toml). We declare the
# same rev here so any Blinc code that opts into the
# `krio-async-backend` feature on `zyntax_embed` resolves to the
# exact rev Zyntax was compiled against — preventing API mismatches
# between Zyntax's compiled-against-X-rev krio types and any
# transitively-resolved-Y-rev copy. Cargo's `[patch]` table rejects
# same-URL+same-rev redirects as no-ops, so the workspace-deps
# declaration is the operative pin: when the Zyntax rev is bumped
# upstream and its `krio_adapter` moves to a newer krio rev, bump
# these entries together.
krio-async     = { git = "https://github.com/darmie/krio.git", rev = "fe0177c" }
krio-stackless = { git = "https://github.com/darmie/krio.git", rev = "fe0177c" }
krio-core      = { git = "https://github.com/darmie/krio.git", rev = "fe0177c" }

# GPU rendering
#
# Pinned to wgpu 26.0.1 + wgpu-hal 26.0.5: wgpu 23 hits a "Parent device
# is lost" crash on the Pixel 10 Pro / Tensor G5 PowerVR D-Series Vulkan
# driver (25.1@6794074) during SDF render-pipeline creation. The 26.0.5
# wgpu-hal patch series ships fixes for several PowerVR/Mali pipeline-
# creation issues. Avoiding 27/28/29 because they carry their own
# regressions and we want a stable, known-good base.
#
# wgpu-hal is a transitive dep of wgpu; `wgpu = "=26.0.1"` requires
# wgpu-hal ^26.0, which would normally resolve to the latest 26.x
# (26.0.6 at the time of writing). We force 26.0.5 because 26.0.6
# carries `wgpu#8420` ([hal/vulkan] Wait for fence signalled in
# vkAcquireNextImage). That PR fixes an NVIDIA Fifo stutter (#8310)
# but regresses `vkAcquireNextImage` p99 from ~130 µs to ~20,254 µs
# per the bisected reproducer in `wgpu#9559`. Same generic
# acquire-path code runs on Mesa Intel + Wayland, which is exactly
# what we hit: clicks delayed multiple seconds, UI feels frozen
# regardless of present mode (Mailbox / Immediate / Fifo) because
# the fence-wait gates the acquire before the present mode is
# consulted. Cherry-picks of #8420 also exist in v27/v28/v29, so
# bumping the major doesn't escape — pin to the last pre-regression
# patch.
#
# Forcing the pin requires a direct declaration; `wgpu`'s `^26.0`
# would otherwise resolve up to 26.0.6. `crates/blinc_gpu` declares
# `wgpu-hal.workspace = true` so this constraint propagates into
# the resolver even though no Blinc code imports `wgpu_hal::*`.
wgpu = "=26.0.1"
wgpu-hal = "=26.0.5"
naga = "=26.0.0"
bytemuck = { version = "1.14", features = ["derive"] }

# Layout engine
taffy = { version = "0.6", features = ["content_size"] }

# Windowing
winit = "0.30"
raw-window-handle = "0.6"

# Platform: Android
ndk = "0.9"
android-activity = { version = "0.6", features = ["native-activity"] }
jni = "0.21"

# Platform: iOS
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", features = ["NSBundle", "NSString", "NSPathUtilities"] }
objc2-ui-kit = { version = "0.3.2", features = ["UIScreen", "UIWindow", "UIView", "UIApplication", "UIResponder"] }
objc2-metal = "0.3.2"

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time"] }
pollster = "0.4"

# Utilities
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Data structures
slotmap = { version = "1.0", features = ["serde"] }
smallvec = { version = "1.11", features = ["serde"] }
rustc-hash = "2.0"
indexmap = "2.7"
lru = "0.12"

# Regex for syntax highlighting
regex = "1.10"

# Path tessellation
lyon = "1.0"

# Text rendering
ttf-parser = "0.25"
rustybuzz = "0.20"
unicode-bidi = "0.3"
unicode-linebreak = "0.1"
fontdb = "0.22"

# Image processing (for glyph atlas)
image = { version = "0.25", default-features = false, features = ["png"] }

# SVG parsing
usvg = "0.44"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Hot reload / file watching
notify = "7.0"

# Testing
criterion = "0.5"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false

# Optimized for small binary size (mobile platforms)
[profile.release-small]
inherits = "release"
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"

# Local-dev overrides for the downstream `/packages/blinc_*` crates.
# Each of those packages depends on Blinc through a pinned git rev so
# they remain usable as standalone git deps for outside consumers.
# Inside this Blinc workspace we redirect those git deps back to the
# local crates, so changes to Blinc flow through without having to
# push + bump revs in every package. CI builds that don't have
# `/packages/` checked out skip the patch entirely (the workspace
# resolver only applies patches whose `path` exists).
[patch."https://github.com/project-blinc/Blinc.git"]
blinc_core = { path = "crates/blinc_core" }
blinc_layout = { path = "crates/blinc_layout" }
blinc_platform = { path = "crates/blinc_platform" }
# `blinc_gpu` is path-patched too because git-pinned versions in
# `packages/*` would otherwise compile their own `paint.rs` /
# `flow_codegen.rs` against the LOCAL `blinc_core` (path-patched
# above). New variants on shared pub enums (`BuiltinVar`, `ClipShape`
# field additions, etc.) break the pinned `blinc_gpu`'s exhaustive
# matches and struct destructures. Path-patching keeps the GPU
# pipeline in lockstep with core.
blinc_gpu = { path = "crates/blinc_gpu" }

# (former [patch] redirect for in-flight zyntax development was here —
# dropped once the upstream change landed and per-crate `rev =` pins
# were bumped to the matching SHA. Restore the same shape if you need
# to iterate on zyntax against this checkout again.)
