[workspace]
resolver = "2"
members = [
    "crates/blinc_app",
    "crates/blinc_cli",
    "crates/blinc_core",
    "crates/blinc_animation",
    "crates/blinc_image",
    "crates/blinc_layout",
    "crates/blinc_gpu",
    "crates/blinc_macros",
    "crates/blinc_dsl_macro",
    "crates/blinc_paint",
    "crates/blinc_platform",
    "crates/blinc_recorder",
    "crates/blinc_text",
    "crates/blinc_svg",
    "crates/blinc_theme",
    "crates/blinc_cn",
    "crates/blinc_cn_dsl",
    "crates/blinc_icons",
    "crates/blinc_tabler_icons",
    "crates/blinc_debugger",
    "crates/blinc_router",
    "crates/blinc_media",
    "crates/blinc_runtime",
    "crates/blinc_test_suite",
    # Blinc DSL — Zyntax-embedding crate, behind risk-reduction
    # prototype. See ROADMAP §3 for the staged plan.
    "crates/blinc_dsl_core",
    "extensions/blinc_platform_desktop",
    "extensions/blinc_platform_android",
    "extensions/blinc_platform_ios",
    "extensions/blinc_platform_harmony",
    "extensions/blinc_platform_web",
    "examples/web_hello",
    "examples/web_scroll",
    "examples/web_drag",
    "examples/web_assets",
    "examples/web_mobile_demo",
    "examples/web_typography",
    "examples/web_text_widgets",
    "examples/web_text_position",
    # Cross-target desktop examples (was crates/blinc_app/examples/*).
    # Separate crate so its 35MB of assets (videos, 3D models, HDRIs)
    # don't bloat the published blinc_app package.
    "examples/blinc_app_examples",
    # Auto-generated wasm wrappers from `tools/build-web-examples`.
    # Gitignored; the glob tolerates an empty match on fresh checkouts.
    "examples/_generated/*",
    # Codegen tools below are not in `default-members` — invoke via
    # `cargo run -p <name>`.
    "tools/build-web-examples",
    "tools/blinc-regression",
    "tools/emoji-scan",
    # Drop-in NotoColorEmoji fallback that auto-registers with
    # `blinc_text` via `#[ctor]`. Opt-in by the consumer app.
    "crates/blinc_noto_emoji",
    # Sibling: Noto Sans / Noto Sans Math subsets for monochrome
    # symbols `blinc_noto_emoji` doesn't carry.
    "crates/blinc_noto_symbols",
]

# Colocated downstream packages are gitignored (see .gitignore) and have
# their own upstream repos. Exclude their directory from this workspace so
# their Cargo.toml files don't get implicitly picked up if someone creates
# them as a workspace-style project.
exclude = [
    "packages/*",
    "packages",
    # Scaffold template for `blinc new` — this is a source template with
    # `{{project_name}}` placeholders, not a real crate. Cargo picks it
    # up when resolving git-fetched copies of this repo (blinc_gltf etc.
    # declare Blinc deps by git URL, and cargo scans every Cargo.toml
    # in the fetched tree) and chokes on the placeholder package name.
    "toolchain/templates",
    "toolchain/templates/rust",
]

# Platform-specific crates are included but have target-gated dependencies
# Build for Android: source scripts/android-env.sh && cargo build --target aarch64-linux-android -p blinc_platform_android
# Build for iOS: cargo build --target aarch64-apple-ios -p blinc_platform_ios

[workspace.package]
version = "0.5.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/project-blinc/Blinc"
rust-version = "1.85"

[workspace.dependencies]
# Krio (async runtime) — mirror the rev Zyntax's `krio_adapter` pins
# to (zyntax/crates/passes/krio_adapter/Cargo.toml). Cargo's `[patch]`
# rejects same-URL+same-rev redirects, so the workspace-deps line is
# the operative pin. Bump all three together when Zyntax does.
krio-async     = { git = "https://github.com/darmie/krio.git", rev = "fe0177c" }
krio-stackless = { git = "https://github.com/darmie/krio.git", rev = "fe0177c" }
krio-core      = { git = "https://github.com/darmie/krio.git", rev = "fe0177c" }

# GPU rendering — wgpu 26.x for the PowerVR Tensor G5 SDF-pipeline
# fix (23 hits "Parent device is lost"). 27/28/29 carry their own
# regressions. wgpu-hal pinned to 26.0.5 to avoid `wgpu#8420`'s
# `vkAcquireNextImage` fence-wait that regresses acquire p99 156×
# on Mesa (wgpu#9559) — see `gotcha-wgpu-hal-26-0-6-acquire-regression`
# for the full story. `blinc_gpu` declares `wgpu-hal.workspace = true`
# so the pin propagates without any source import.
wgpu = "=26.0.1"
wgpu-hal = "=26.0.5"
naga = "=26.0.0"
bytemuck = { version = "1.14", features = ["derive"] }

# Layout engine
taffy = { version = "0.6", features = ["content_size"] }

# Windowing
winit = "0.30"
raw-window-handle = "0.6"

# Platform: Android
ndk = "0.9"
android-activity = { version = "0.6", features = ["native-activity"] }
jni = "0.21"

# Platform: iOS
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", features = ["NSBundle", "NSString", "NSPathUtilities"] }
objc2-ui-kit = { version = "0.3.2", features = ["UIScreen", "UIWindow", "UIView", "UIApplication", "UIResponder"] }
objc2-metal = "0.3.2"

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time"] }
pollster = "0.4"

# Utilities
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Data structures
slotmap = { version = "1.0", features = ["serde"] }
smallvec = { version = "1.11", features = ["serde"] }
rustc-hash = "2.0"
indexmap = "2.7"
lru = "0.12"

# Regex for syntax highlighting
regex = "1.10"

# Path tessellation
lyon = "1.0"

# Text rendering
ttf-parser = "0.25"
rustybuzz = "0.20"
unicode-bidi = "0.3"
unicode-linebreak = "0.1"
fontdb = "0.22"

# Image processing (for glyph atlas)
image = { version = "0.25", default-features = false, features = ["png"] }

# SVG parsing
usvg = "0.44"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Hot reload / file watching
notify = "7.0"

# Testing
criterion = "0.5"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false

# Optimized for small binary size (mobile platforms)
[profile.release-small]
inherits = "release"
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"

# Local-dev path-patch for downstream `/packages/blinc_*` crates so
# their pinned git deps resolve back to this workspace. CI builds
# without `/packages/` checked out skip the patch (resolver only
# applies patches whose `path` exists). `blinc_gpu` is patched too —
# without it, pinned `packages/*` would compile their own GPU code
# against the local `blinc_core`, breaking exhaustive matches on
# any new `BuiltinVar` / `ClipShape` variant.
[patch."https://github.com/project-blinc/Blinc.git"]
blinc_core = { path = "crates/blinc_core" }
blinc_layout = { path = "crates/blinc_layout" }
blinc_platform = { path = "crates/blinc_platform" }
blinc_gpu = { path = "crates/blinc_gpu" }
# blinc_theme is patched too — downstream `/packages/` crates pin
# `blinc_theme` at a git rev that predates the `ShapeTokens` + shadow-
# stack work. Without this entry the path-dep'd downstream gets the
# stale git copy and rejects calls into the new API surface.
blinc_theme = { path = "crates/blinc_theme" }
# blinc_svg patched too — downstream packages pull it transitively
# for SvgDocument / Path conversion; without this they'd resolve to
# the pinned git rev.
blinc_svg = { path = "crates/blinc_svg" }

# Patch the sibling downstream `blinc_canvas_kit` git URL to the
# local `packages/blinc_canvas_kit` copy. Without this entry, the
# example crate's git dep on canvas_kit (at a pinned rev) and the
# path-dep that `/packages/blinc_node_editor` uses end up as two
# different in-graph copies — `editor.element()` returns one
# version's `Div` while the example imports the other's, and the
# types refuse to unify. Cargo only applies the patch when the
# path target exists, so CI builds without `/packages/` skip it.
[patch."https://github.com/project-blinc/blinc_canvas_kit.git"]
blinc_canvas_kit = { path = "packages/blinc_canvas_kit" }
