[package]
name = "blinc_animation"
description = "Blinc animation system - spring physics, keyframes, and timeline orchestration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/blinc_animation"
rust-version.workspace = true
keywords = ["ui", "gui", "animation", "spring", "blinc"]
categories = ["gui"]

[lib]
crate-type = ["lib"]

[features]
default = []
zrtl-plugin = []  # Enable ZRTL plugin exports (for when Zyntax Grammar2 is ready)

[dependencies]
blinc_core = { path = "../blinc_core", version = "0.5.0" }

# Data structures
slotmap.workspace = true
smallvec.workspace = true

# Logging
tracing.workspace = true

# `web_time::Instant` is a drop-in replacement for `std::time::Instant`.
# On native targets it's a `pub use std::time::Instant` re-export with
# zero overhead. On `wasm32-unknown-unknown` it routes through
# `performance.now()` instead of the std type, which panics with
# "time not implemented on this platform" the moment `Instant::now()`
# is actually called. This dep MUST live in the regular `[dependencies]`
# table (not `[target.'cfg(...)'.dependencies]`) so the import path
# `use web_time::Instant` works identically on both targets.
web-time = "1.1"

# Browser-only — `start_raf()` drives ticks from `requestAnimationFrame`
# instead of a background thread, mirroring how `start_background()`
# works on native targets. The scheduler is the canonical "tick driver"
# abstraction so this is where the rAF integration belongs.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window"] }

# Benchmarks will be added when spring physics implementation is complete
# [dev-dependencies]
# criterion.workspace = true

# [[bench]]
# name = "spring"
# harness = false
