[package]
name = "blinc_app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/blinc_app"
rust-version.workspace = true
description = "Blinc application framework with clean layout and rendering API"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("fuchsia", "ohos"))', 'cfg(target_env, values("ohos"))'] }

[lib]
# rlib: Rust library for normal use
# staticlib: C static library for iOS/Android linking
crate-type = ["rlib", "staticlib"]

[dependencies]
blinc_core = { path = "../blinc_core", version = "0.5.0" }
blinc_layout = { path = "../blinc_layout", version = "0.5.0" }
blinc_gpu = { path = "../blinc_gpu", version = "0.5.0", default-features = false }
blinc_svg = { path = "../blinc_svg", version = "0.5.0" }
blinc_text = { path = "../blinc_text", version = "0.5.0" }
blinc_image = { path = "../blinc_image", version = "0.5.0" }
blinc_platform = { path = "../blinc_platform", version = "0.5.0" }
blinc_animation = { path = "../blinc_animation", version = "0.5.0" }
blinc_macros = { path = "../blinc_macros", version = "0.5.0" }
blinc_router = { path = "../blinc_router", version = "0.5.0" }
blinc_theme = { path = "../blinc_theme", version = "0.5.0" }

# GPU
wgpu.workspace = true

# Windowing (optional - used by windowed feature)
winit = { workspace = true, optional = true }
raw-window-handle = { workspace = true }

# Async
pollster.workspace = true

# `web_time::Instant` — drop-in `std::time::Instant` replacement that
# works on `wasm32-unknown-unknown` via `performance.now()`. On native
# it's a zero-cost re-export. See `blinc_animation/Cargo.toml` for
# the full rationale.
web-time = "1.1"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Data structures
lru = { workspace = true }

# Serialization (window state persistence)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File dialogs (desktop only)
rfd = { version = "0.15", optional = true }

# System tray (desktop only)
tray-icon = { version = "0.22", optional = true }
muda = { version = "0.17", optional = true }

# Desktop notifications
notify-rust = { version = "4", optional = true }

# Global keyboard shortcuts
global-hotkey = { version = "0.7", optional = true }

# Desktop platform - exclude mobile/embedded targets
[target.'cfg(not(any(target_os = "android", target_os = "ios", target_os = "fuchsia")))'.dependencies]
blinc_platform_desktop = { path = "../../extensions/blinc_platform_desktop", version = "0.5.0", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
blinc_platform_android = { path = "../../extensions/blinc_platform_android", version = "0.5.0", optional = true }
android-activity = { workspace = true, optional = true }
ndk = { workspace = true, optional = true }
jni = { workspace = true, optional = true }
android_logger = { version = "0.14", optional = true }
log = { version = "0.4", optional = true }
tracing-android = { version = "0.2", optional = true }
tracing-subscriber = { workspace = true, optional = true }

[target.'cfg(target_os = "ios")'.dependencies]
blinc_platform_ios = { path = "../../extensions/blinc_platform_ios", version = "0.5.0", optional = true }


# HarmonyOS uses "ohos" as target_os
# [target.'cfg(target_os = "ohos")'.dependencies]
# blinc_platform_harmony = { path = "../../extensions/blinc_platform_harmony", version = "0.5.0", optional = true }

# Web platform — wasm32 target only. Pulled in by the `web` feature.
# Mirrors the android/ios pattern: extension crate + a few wasm-bindgen
# bindings live behind a target gate so desktop / mobile dep trees stay
# completely free of `web-sys`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
blinc_platform_web = { path = "../../extensions/blinc_platform_web", version = "0.5.0", optional = true }
# Drop-in NotoColorEmoji fallback — `WebApp::new` calls its
# `register()` explicitly, before any text-shaping path runs, so
# the browser (which exposes zero system fonts) still has a color
# emoji face available by the time the first frame renders. Without
# this, every emoji renders as `.notdef`. Pulled in unconditionally
# by the `web` feature. Applications that want a different emoji
# font (Twemoji, Fluent, OpenMoji) can publish their own
# `blinc_<font>_emoji` add-on following the same register() shape
# and patch this one out via a workspace patch.
blinc_noto_emoji = { path = "../blinc_noto_emoji", version = "0.5.0", optional = true }
# Sibling of `blinc_noto_emoji`: drop-in NotoSans + NotoSansMath
# subsets covering the monochrome text characters that the emoji
# font doesn't carry — math operators, double arrows, currency
# symbols, Latin-1 Supplement punctuation. Same register() shape,
# same wiring in `WebApp::new`. Pulled in unconditionally by `web`
# because the same "browser has zero system fonts" constraint that
# makes emoji broken also makes math / currency / arrow glyphs
# broken.
blinc_noto_symbols = { path = "../blinc_noto_symbols", version = "0.5.0", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "EventTarget",
    "HtmlCanvasElement",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "DomRect",
    "CssStyleDeclaration",
    "ClipboardEvent",
    "DataTransfer",
    "Navigator",
    "Clipboard",
    "Node",
    "Text",
    "AddEventListenerOptions",
] }
console_error_panic_hook = { version = "0.1", optional = true }
# `web-time` is in the regular `[dependencies]` table because the
# import path `use web_time::Instant` is the same on every target.

[dev-dependencies]
image.workspace = true
tracing-subscriber.workspace = true
blinc_cn = { path = "../blinc_cn", version = "0.5.0" }
blinc_image = { path = "../blinc_image", version = "0.5.0" }
blinc_icons = { path = "../blinc_icons", version = "0.5.0" }
blinc_tabler_icons = { path = "../blinc_tabler_icons", version = "0.5.0" }
blinc_canvas_kit = { path = "../blinc_canvas_kit", version = "0.5.0" }
blinc_media = { path = "../blinc_media", version = "0.5.0" }

[features]
default = ["windowed"]
windowed = ["winit", "blinc_platform_desktop", "blinc_gpu/desktop", "rfd", "tray-icon", "muda", "notify-rust", "global-hotkey"]
android = ["blinc_platform_android", "android-activity", "ndk", "jni", "android_logger", "log", "tracing-android", "tracing-subscriber", "blinc_gpu/android"]
ios = ["blinc_platform_ios", "blinc_gpu/ios"]
harmony = ["blinc_gpu/harmony"]  # blinc_platform_harmony when target is available
fuchsia = []
# Web (wasm32) — `wasm-pack build --target web` against this feature.
#
# `blinc_noto_emoji` + `blinc_noto_symbols` are pulled in
# unconditionally by the web feature: browsers expose zero system
# fonts and without a bundled fallback every emoji (and every
# math / arrow / currency / Latin-1 supplement glyph) renders as
# `.notdef`. The two crates are complementary — `blinc_noto_emoji`
# carries the color pictograph glyphs while `blinc_noto_symbols`
# carries the monochrome text glyphs. Together they cover the full
# non-ASCII set the scanner picks up from workspace examples. Apps
# that want to swap either font can depend on their own
# `blinc_<font>_*` add-on and patch the default out via a workspace
# patch.
web = [
    "blinc_platform_web",
    "blinc_noto_emoji",
    "blinc_noto_symbols",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "web-sys",
    "console_error_panic_hook",
    "blinc_gpu/web",
]
